[package]
name = "chrony-candm-derive"
version = "0.1.0"
authors = [ "Daniel Fox Franke <dff@amazon.com>" ]
edition = "2018"
description = "Library for communication with Chrony's control & monitoring interface"
license = "GPL-2.0-only"
categories = [ "date-and-time" ]
keywords = [ "chrony" ]
include = [ "NOTICE" ]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"