[package]
name = "chrony-candm-derive"
version = "0.1.0"
authors = [ "Daniel Fox Franke <dff@amazon.com>" ]
edition = "2018"
description = "Procedural macros for use by chrony-candm"
repository = "https://github.com/aws/chrony-candm"
license = "GPL-2.0-only"
categories = [ "date-and-time" ]
keywords = [ "chrony" ]
include = [ "src/**", "LICENSE", "NOTICE", "README" ]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"
